--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
     <head>
         <title>Snake Game</title>
+            <style>
+                #canvaswrapper{
+                    display: inline-flex;
+                    border: 10px solid rgb(153, 153, 153);
+                    margin-left: 30%;
+                    margin-top: 30px;
+                }
+            </style>
     </head>
     <body>
-        <canvas id="canvas" width="400" height="400"></canvas>
+        <div id='canvaswrapper'>
+            <canvas id="canvas" width="625" height="625"></canvas>
+        </div>
         <script src="script.js"></script>    
     </body>
 </html>
